chore: fix group recognization input, add singleGraph ratio